test/reject/tine_duplicate.rk
rake duplicate_tine(values: f32s) -> f32s:
  tine #active when values >= <0.0>
  tine #active when values <= <0.0>

  through #active else <0.0> into selected:
    values

  return sweep:
    | #active => selected
    | _       => <0.0>
